--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+* {
+  min-height: 0;
+  min-width: 0;
+  text-align: center;
+}
+
 h1 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 800; 
@@ -6,11 +12,32 @@ h1 {
 
 }
 
+h3 {
+  color: rgb(58, 58, 58);
+}
+
 p {
   font-family: "Montserrat", sans-serif;
   font-weight: 300;
   color: rgb(58, 58, 58);
+}
 
+a {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 1.3em;
+  text-transform: uppercase;
+  color: rgb(58, 58, 58);
+}
+
+a:hover {
+  color: rgb(119, 119, 119);
+}
+
+.ScrollArrow {
+  background-image: url('./img/downArrow.svg');
+  max-width: 2em;
+  padding: 1em;  
 }
 
 .App {
@@ -25,7 +52,8 @@ p {
   height: 90vh;
   width: 90vw;
 
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
 
   display: flex;
   flex-direction: column;
@@ -43,6 +71,11 @@ p {
 .Intro {  
   /* justify-content: space-between; */
 
+  height: 100vh;
+  width: 100vw;
+
+  margin: 0;
+
   background-image: url("./img/pattern.svg");
   background-repeat: no-repeat;
   background-size: 100%;
@@ -57,43 +90,61 @@ p {
   width: 70%;
   max-width: 25em; 
 
-  margin-top: 40%;
+  /* margin-top: 40%; */
 
-}
-
-.DownArrow {
-  max-width: 2em;
-  padding: 1em;
-
-    
 }
 
 .About {
-  justify-content: center;
-  padding-top: 4em;
+  /* padding-top: 4em; */
+}
+
+.AboutCont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0em 2em;
 
 }
 
 .Selfie {
   width: 50%;
   max-width: 13em;
+  min-width: 12em;
   border-radius: 10em;
+  margin: 1em;
   box-shadow:  5px 5px 5px grey;
-
 
 }
 
 .AboutMe {
-  padding: 2em 3em;
-  text-align: center;
-  max-width: 60em;
+  margin: 0em 1em;
+  max-width: 50em;
 }
 
 .Projects {
+  justify-content: center;
   
 }
 
 .Carousel {
+  width: 80%;
+
+  /* height: 200px; */
+  /* padding: 40px; */
+  
+}
+
+.Slider {
+
+}
+
+.SliderImg {
+  width: 100%;
+  height: 200px;
+
+  /* height: 30em; */
+  background-position: center;
+
 
 }
 
@@ -101,12 +152,46 @@ p {
 
 }
 
-.Contact {
-
-
+.ContactCont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-@keyframes fadein {
-  from { opacity: 0; }
-  to { opacity: 1; }
+.LogoSlider {
+  width: 80%;
+  display: flex;
+}
+
+.logoImg {
+  width: 4em;
+  margin: 1em;
+  align-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+@media (min-width: 667px) {
+  .AboutCont {
+    flex-direction: row;
+    max-width: 50em;
+    /* padding: 0em em; */
+  }
+  .AboutMe { 
+    text-align: left;
+  }
+  .ContactCont {
+    flex-direction: row;
+    max-width: 50em;
+  }
+}
+
+@media (max-height: 960px) {
+  .SliderText {
+    display: none;
+
+  }
+  .SliderImg {
+    /* height: auto; */
+  }
 }
