--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ h1 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 800; 
   text-align: center;
+  /* margin: .5em 1em; */
   color: #FF4A45;
 
 }
@@ -20,6 +21,8 @@ p {
   font-family: "Montserrat", sans-serif;
   font-weight: 300;
   color: rgb(58, 58, 58);
+  margin: 1em;
+  max-width: 40em;
 }
 
 a {
@@ -59,6 +62,7 @@ a:hover {
   flex-direction: column;
   align-items: center;
   margin: 2em 0em;
+  /* padding: 1em; */
 
   background-image: -webkit-gradient(linear, left top, right bottom, from(#ACEEE6), to(#ACBCEE));
   background-image: -webkit-linear-gradient(top, start-color, end-color);
@@ -100,9 +104,11 @@ a:hover {
 
 .AboutCont {
   display: flex;
+  max-width: 40em;
   flex-direction: column;
   align-items: center;
   padding: 0em 2em;
+  justify-content: space-between;
 
 }
 
@@ -111,87 +117,120 @@ a:hover {
   max-width: 13em;
   min-width: 12em;
   border-radius: 10em;
-  margin: 1em;
   box-shadow:  5px 5px 5px grey;
 
 }
 
 .AboutMe {
-  margin: 0em 1em;
-  max-width: 50em;
+  max-width: 40em;
+  margin:
 }
 
 .Projects {
-  justify-content: center;
-  
+  /* justify-content: center; */
+  /* height: 100%; */
 }
 
 .Carousel {
   width: 80%;
-
+  max-width: 40em;
+  /* height: 60%; */
   /* height: 200px; */
   /* padding: 40px; */
   
 }
 
 .Slider {
-
+  /* max-width: 40em; */
+  /* width: 80%; */
+  /* max-height: 30em; */
+  
+  /* display: flex; */
+  /* height: auto; */
+  /* align-content: center; */
+  /* align-items: center; */
 }
 
 .SliderImg {
   width: 100%;
-  height: 200px;
-
-  /* height: 30em; */
-  background-position: center;
-
+  padding: 1em 0em;
+  margin: auto;
+  /* height: 5em; */
 
 }
 
 .Tools {
-
-}
-
-.ContactCont {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .LogoSlider {
+  /* box-shadow: inset 1px 4px 9px -6px grey;   */
+  max-width: 40em;
   width: 80%;
   display: flex;
 }
 
 .logoImg {
-  width: 4em;
+  height: 4em;
   margin: 1em;
   align-content: center;
   align-items: center;
   flex-direction: row;
 }
 
-@media (min-width: 667px) {
-  .AboutCont {
-    flex-direction: row;
-    max-width: 50em;
-    /* padding: 0em em; */
-  }
-  .AboutMe { 
-    text-align: left;
-  }
-  .ContactCont {
-    flex-direction: row;
-    max-width: 50em;
-  }
+.ContactCont {
+  /* margin: 2em; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  /* font-size: 1em; */
 }
 
-@media (max-height: 960px) {
-  .SliderText {
-    display: none;
+.QRimage {
+  width: 60%;
+  max-width: 7em;
+  margin: 1em;
+  
+}
+
+.ContactLinks {
+  display: flex;
+  font-size: .8em;
+  flex-direction: column;
+}
+
+@media (min-width: 567px) {
+  .AboutCont {
+    flex-direction: row;
+  }
+
+  .ContactLinks {
+    flex-direction: row;
+    justify-content: space-between;  
+  }
+
+  .ContactLinks > * {
+    margin: 1em;
+  }
+
+  .Selfie {
+    margin: 1em;
+  }
+
+  .ContactCont {
+    /* flex-direction: row; */
+    /* max-width: 40em; */
+    /* justify-content: eve */
+    /* margin-right: 9%; */
 
   }
+
+  /* .SliderText {
+    display: none;
+  } */
+
   .SliderImg {
     /* height: auto; */
   }
+
 }
