--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,19 @@
   text-align: center;
 }
 
+hr {
+  border-style: solid;
+  color: #FF4A45;
+  margin: 1.5em 0em;
+  width: 80%;
+  max-width: 50em;
+}
+
 h1 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 800; 
   text-align: center;
-  /* margin: .5em 1em; */
+  margin: 0em 0em;
   color: #FF4A45;
   padding: 0em;
 
@@ -22,19 +30,24 @@ p {
   font-family: "Montserrat", sans-serif;
   font-weight: 300;
   color: rgb(58, 58, 58);
-  margin: 1em;
+  margin: 2em;
   max-width: 40em;
+  text-align: justify; 
+  text-justify: inter-cluster;
+  text-align-last: center;
 }
 
 a {
+  
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   font-size: 1.3em;
+  text-decoration: none;
   text-transform: uppercase;
   color: rgb(58, 58, 58);
   position: relative;
   transition-property: all;
-  transition-duration: 1s;
+  transition-duration: .2s;
   transition-timing-function: ease-in-out;
 }
 
@@ -51,17 +64,15 @@ a:active {
   text-decoration: none;
   color: white;
   background-color: #FF4A45;
+  border-radius: .7em;
+  padding: .5em 1.2em;
   
   position: fixed;
-  padding: .5em 1.2em;
-  border-radius: .7em;
   margin: 1em 0em;
-  opacity: 1;
   bottom: 1.5em;
   right: auto;
 
   box-shadow:  5px 5px 7px rgba(0, 0, 0, 0.185); 
-  transition: all 0.2s ease-in-out;
 
 }
 
@@ -85,8 +96,10 @@ a:active {
 
 .Section {
 
-  height: 90vh;
+  height: 100%;
   width: 90vw;
+
+  padding: 6em 0em;
 
   justify-content: center;
   align-items: center;
@@ -109,8 +122,9 @@ a:active {
   box-shadow:  7px 7px 7px rgba(0, 0, 0, 0.185); 
 } */
 
-.Intro {  
-
+.Intro { 
+  margin: 0;
+  padding: 0;
   height: 100vh;
   width: 100vw;
 
@@ -120,7 +134,7 @@ a:active {
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: 50% 50%;
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
   background-position: auto; 
   overflow: hidden;
 
@@ -136,13 +150,13 @@ a:active {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0em 2em;
+  padding: 2em 3em;
   justify-content: space-between;
 
 }
 
 .Selfie {
-  width: 25%;
+  width: 40%;
   min-width: 7em;
   border-radius: 10em;
   box-shadow:  5px 5px 10px rgba(0, 0, 0, 0.185);
@@ -167,14 +181,14 @@ a:active {
 }
 
 .RecCarousel {
-  text-align: center;
-  min-height: 60em;
+  /* text-align: center; */
 }
 
 .recSliderImg {
   border-radius: 7em;
-  height: 5em;
-  margin: auto;
+  width: 6em;
+  height: 6em;
+  margin: 1em auto;
 }
 
 .LogoSlider {
@@ -207,13 +221,13 @@ a:active {
 
 @media (min-width: 670px) {
 
-  h1 {
+  /* h1 {
     padding: 1em;
-  }
+  } */
 
   .AboutCont {
     flex-direction: row;
-      max-width: 45em;
+    max-width: 45em;
   }
 
   .AboutMe {
@@ -243,9 +257,8 @@ a:active {
   }
 
   .Selfie {
-    width: 50%;
+    width: 30%;
     margin: 1em;
-    max-width: 13em;
   }
 
 }
