--- a/src/App.css
+++ b/src/App.css
@@ -78,13 +78,12 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;  
-  background-image: -webkit-gradient(linear, left top, right bottom, from(rgb(255, 108, 108)), tor rgb(255, 108, 108));
 
 }
 
 .Section {
 
-  height: 100%;
+  /* height: 100%; */
   width: 100vw;
   max-width: 80em;
   padding: 6em 0em;
