--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ hr {
 h1 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 800; 
-  text-align: center;
+  text-align: left;
   margin: 0em 0em;
   color: #FF4A45;
   padding: 0em;
@@ -32,7 +32,7 @@ p {
   color: rgb(58, 58, 58);
   margin: 2em;
   max-width: 40em;
-  text-align: center; 
+  text-align: left; 
 }
 
 .Button {
@@ -133,7 +133,7 @@ p {
   flex-direction: column;
   align-items: center;
   padding: 2em 0em;
-  text-align: center; 
+  text-align: left; 
   justify-content: space-between;
 
 }
