--- a/src/App.css
+++ b/src/App.css
@@ -122,7 +122,7 @@ p {
 
   background-image: url("./img/pattern.svg");
   background-repeat: no-repeat;
-  background-size: auto;
+  background-size: cover;
   background-position: 50% 50%;
   /* background-attachment: fixed; */
   /* background-position: auto;  */
