--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ hr {
 }
 
 h1 {
-  font-family: 'avenir', sans-serif;
+font-family: 'Nunito Sans', sans-serif;
   font-weight: 800; 
   text-align: left;
   margin: 0em 0em;
@@ -24,11 +24,16 @@ h1 {
 }
 
 h3 {
+  font-family: 'Nunito Sans', sans-serif;
   color: rgb(58, 58, 58);
+  font-weight: 800; 
+
+  letter-spacing: 1px;
+
 }
 
 p {
-  font-family: "avenir", sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   font-weight: 300;
   
   color: #606060;
@@ -39,8 +44,10 @@ p {
 
 .Button {
   position: relative;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 500;
+  font-family: 'Nunito Sans', sans-serif;
+  font-weight: 800;
+  letter-spacing: 3px;
+  text-align: left;
   font-size: 1em;
   text-transform: uppercase;
   text-decoration: none;
