--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ p {
   font-family: 'Nunito Sans', sans-serif;
   font-weight: 800;
   letter-spacing: 3px;
-  text-align: left;
+  text-align: center;
   font-size: 1em;
   text-transform: uppercase;
   text-decoration: none;
